--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     padding-bottom:50px;
     padding-top: 50px;
     border:5px solid green ;
-    list-style:square;
+    
     padding:30px;
     
 }
@@ -27,8 +27,8 @@
     margin-top:30px;
     padding-bottom:50px;
     padding-top: 50px;
-    border:10px solid yellow ;
-    list-style: square;
+    border:5px solid yellow;
+   
     padding:30px;
 
 }
@@ -40,9 +40,9 @@
     margin-top:30px;
     padding-bottom:50px;
     padding-top: 50px;
-    border:5px solid orange ;
-    list-style:square;
-    padding: 30px;
+    border:5px solid orangered ;
+
+    padding:30px;
 }
 a:link{
     color: white;
